Se agregó la capacidad de filtrar según DISPONIBILIDAD del auto. Si un vehiculo se encuentra reservado por alguien, este no será visible si el filtro 'disponible' está aplicado. Caso contrario, si se aplica el filtro'proximamente', se mostrarán SOLO los vehiculos que estén reservados y por lo tanto no estén disponibles

--- a/proyecto_final/frontend/pages/catalog.html
+++ b/proyecto_final/frontend/pages/catalog.html
@@ -123,56 +123,81 @@
         });
     }
 
-    // Función para manejar la selección de filtros
-    function applyFilters(vehicles) {
-        const selectedTransmision = Array.from(document.querySelectorAll('.filter-transmision:checked')).map(el => el.id);
-        const selectedDisponibilidad = Array.from(document.querySelectorAll('.filter-disponibilidad:checked')).map(el => el.id);
-        const selectedFabricante = Array.from(document.querySelectorAll('.filter-fabricante:checked')).map(el => el.id);
-        const selectedCategoria = Array.from(document.querySelectorAll('.filter-categoria:checked')).map(el => el.id);
+ // Función para manejar la selección de filtros
+ function applyFilters(vehicles, reservedVehicleIds) {
+    const selectedTransmision = Array.from(document.querySelectorAll('.filter-transmision:checked')).map(el => el.id);
+    const selectedDisponibilidad = Array.from(document.querySelectorAll('.filter-disponibilidad:checked')).map(el => el.id);
+    const selectedFabricante = Array.from(document.querySelectorAll('.filter-fabricante:checked')).map(el => el.id);
+    const selectedCategoria = Array.from(document.querySelectorAll('.filter-categoria:checked')).map(el => el.id);
 
-        return vehicles.filter(vehicle => {
-            const matchesTransmision = selectedTransmision.length === 0 || selectedTransmision.includes(vehicle.transmission.toLowerCase());
-            const matchesDisponibilidad = selectedDisponibilidad.length === 0 || selectedDisponibilidad.includes(vehicle.availability.toLowerCase());
-            const matchesFabricante = selectedFabricante.length === 0 || selectedFabricante.includes(vehicle.manufacturer.toLowerCase());
-            const matchesCategoria = selectedCategoria.length === 0 || selectedCategoria.includes(vehicle.category.toLowerCase());
+    return vehicles.filter(vehicle => {
+        // Comprobar la transmisión
+        const matchesTransmision = selectedTransmision.length === 0 || selectedTransmision.includes(vehicle.transmission.toLowerCase());
 
-            return matchesTransmision && matchesDisponibilidad && matchesFabricante && matchesCategoria;
-        });
-    }
-
-    document.addEventListener('DOMContentLoaded', async () => {
-        const container = document.querySelector('#vehicles-container');
-
-        try {
-            const response = await fetch('http://localhost:3000/api/vehicles');
-            const vehicles = await response.json();
-
-            // Función para mostrar los vehículos
-            function showVehicles(vehiclesToDisplay) {
-                container.innerHTML = vehiclesToDisplay.map(vehicle => `
-                    <a href="vehicle.html?id=${vehicle.id}" class="bg-gradient-to-r from-rose-400 to-purple-400 rounded-lg p-4 text-center">
-                        <img src="${vehicle.image_url}" alt="${vehicle.name}" class="h-32 w-full object-cover rounded">
-                        <p class="mt-2 text-white font-semibold">${vehicle.name}</p>
-                    </a>
-                `).join('');
+        // Comprobar la disponibilidad
+        let matchesDisponibilidad = false;
+        if (selectedDisponibilidad.length === 0) {
+            matchesDisponibilidad = true; // Si no hay filtros de disponibilidad seleccionados, todos los vehículos son válidos
+        } else {
+            if (selectedDisponibilidad.includes('disponible') && !reservedVehicleIds.includes(vehicle.id)) {
+                matchesDisponibilidad = true; // Vehículo disponible si no está reservado
+            } else if (selectedDisponibilidad.includes('proximamente') && reservedVehicleIds.includes(vehicle.id)) {
+                matchesDisponibilidad = true; // Vehículo próximamente si está reservado
             }
-
-            // Inicialmente mostrar todos los vehículos
-            showVehicles(vehicles);
-
-            // Añadir un event listener para cada filtro
-            document.querySelectorAll('.filter-transmision, .filter-disponibilidad, .filter-fabricante, .filter-categoria').forEach(filter => {
-                filter.addEventListener('change', () => {
-                    const filteredVehicles = applyFilters(vehicles);
-                    showVehicles(filteredVehicles);
-                });
-            });
-
-        } catch (error) {
-            console.error('Error al cargar los vehículos:', error);
-            container.innerHTML = `<p class="text-red-500">Error al cargar los vehículos. Intenta nuevamente más tarde.</p>`;
         }
+
+        // Comprobar el fabricante y la categoría
+        const matchesFabricante = selectedFabricante.length === 0 || selectedFabricante.includes(vehicle.manufacturer.toLowerCase());
+        const matchesCategoria = selectedCategoria.length === 0 || selectedCategoria.includes(vehicle.category.toLowerCase());
+
+        return matchesTransmision && matchesDisponibilidad && matchesFabricante && matchesCategoria;
     });
+}
+
+
+
+
+document.addEventListener('DOMContentLoaded', async () => {
+    const container = document.querySelector('#vehicles-container');
+
+    try {
+        const vehiclesResponse = await fetch('http://localhost:3000/api/vehicles');
+        const vehicles = await vehiclesResponse.json();
+
+        // Obtener los vehículos reservados
+        const availabilityResponse = await fetch('http://localhost:3000/api/vehicle-availability');
+        const reservedVehicleIds = await availabilityResponse.json();
+
+        // Función para mostrar los vehículos
+        function showVehicles(vehiclesToDisplay) {
+            container.innerHTML = vehiclesToDisplay.map(vehicle => `
+                <a href="vehicle.html?id=${vehicle.id}" class="bg-gradient-to-r from-rose-400 to-purple-400 rounded-lg p-4 text-center">
+                    <img src="${vehicle.image_url}" alt="${vehicle.name}" class="h-32 w-full object-cover rounded">
+                    <p class="mt-2 text-white font-semibold">${vehicle.name}</p>
+                </a>
+            `).join('');
+        }
+
+        // Inicialmente mostrar todos los vehículos
+        showVehicles(vehicles);
+
+        // Añadir un event listener para cada filtro
+        document.querySelectorAll('.filter-transmision, .filter-disponibilidad, .filter-fabricante, .filter-categoria').forEach(filter => {
+            filter.addEventListener('change', () => {
+                const filteredVehicles = applyFilters(vehicles, reservedVehicleIds);
+                showVehicles(filteredVehicles);
+            });
+        });
+
+    } catch (error) {
+        console.error('Error al cargar los vehículos o reservas:', error);
+        container.innerHTML = `<p class="text-red-500">Error al cargar los vehículos o reservas. Intenta nuevamente más tarde.</p>`;
+    }
+});
+
+
+
+
 </script>
 
 
