--- a/proyecto_final/frontend/pages/catalog.html
+++ b/proyecto_final/frontend/pages/catalog.html
@@ -171,8 +171,12 @@ document.addEventListener('DOMContentLoaded', async () => {
         // Función para mostrar los vehículos
         function showVehicles(vehiclesToDisplay) {
             container.innerHTML = vehiclesToDisplay.map(vehicle => `
-                <a href="vehicle.html?id=${vehicle.id}" class="bg-gradient-to-r from-rose-400 to-purple-400 rounded-lg p-4 text-center">
-                    <img src="${vehicle.image_url}" alt="${vehicle.name}" class="h-32 w-full object-cover rounded">
+                <a href="vehicle.html?id=${vehicle.id}" class="bg-gradient-to-r from-rose-400 to-purple-400 rounded-lg p-4 text-center relative">
+                    ${reservedVehicleIds.includes(vehicle.id) ? 
+                        '<div class="absolute top-2 right-2 bg-red-500 text-white px-2 py-1 text-xs rounded z-10">Proximamente</div>' : 
+                        ''
+                    }
+                    <img src="${vehicle.image_url}" alt="${vehicle.name}" class="h-32 w-full object-cover rounded ${reservedVehicleIds.includes(vehicle.id) ? 'opacity-60' : ''}">
                     <p class="mt-2 text-white font-semibold">${vehicle.name}</p>
                 </a>
             `).join('');
