--- a/proyecto_final/frontend/pages/index.html
+++ b/proyecto_final/frontend/pages/index.html
@@ -247,7 +247,7 @@
 
 
     <!-- Sección de Contacto -->
-    <section class="py-12 bg-black h-screen fade-in">
+    <section class="py-8 md:py-12 bg-black min-h-screen fade-in">
         <div class="max-w-7xl mx-auto px-6 text-center">
             <!-- Título de la sección -->
             <h2 class="text-8xl font-semibold text-white mb-8">¡Cerremos un trato!</h2>
