Se agregó un favicon al header de la página.

--- a/proyecto_final/frontend/pages/index.html
+++ b/proyecto_final/frontend/pages/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Super Autos Medellín - Inicio</title>
     <link href="../assets/css/styles.css" rel="stylesheet">
+    <link rel="icon" href="../assets/images/favicon.png" type="image/png">
 </head>
 <body class="bg-black font-sans leading-relaxed tracking-wide p-2 md:p-5">
 
