--- a/proyecto_final/frontend/pages/login.html
+++ b/proyecto_final/frontend/pages/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión</title>
     <link href="../assets/css/styles.css" rel="stylesheet">
+    <link rel="icon" href="../assets/images/favicon.png" type="image/png">
 </head>
 <body class="bg-black text-white h-screen flex flex-col items-center justify-between ">
 
