--- a/proyecto_final/frontend/pages/reservation.html
+++ b/proyecto_final/frontend/pages/reservation.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mis Reservas</title>
     <link href="../assets/css/styles.css" rel="stylesheet">
+    <link rel="icon" href="../assets/images/favicon.png" type="image/png">
 </head>
 <body class="bg-black text-white flex flex-col min-h-screen">
 
