Se hicieron correcciones menores, arreglos de indentación, comentarios, se quitaron archivos en desuso.

--- a/proyecto_final/frontend/pages/reservation.html
+++ b/proyecto_final/frontend/pages/reservation.html
@@ -10,7 +10,7 @@
 <body class="bg-black text-white flex flex-col min-h-screen">
 
     <!-- NavBar -->
-    <div id="navbar-placeholder"></div>  <!-- Aquí se insertará el navbar -->
+    <div id="navbar-placeholder"></div> 
 
     <!-- Contenido Principal -->
     <main class="flex-grow flex flex-col justify-center items-center mt-10 px-4 md:px-0">
@@ -47,7 +47,7 @@
     </main>
 
     <!-- Footer -->
-    <div id="footer-placeholder"></div>  <!-- Aquí se insertará el footer -->
+    <div id="footer-placeholder"></div> 
 
 </body>
 </html>
